fixed create BEM files utility

--- a/pages/index.pug
+++ b/pages/index.pug
@@ -1,3 +1,7 @@
+include ../Common.blocks/DropdownDatepicker/-Icon/DropdownDatepicker-Icon.pug
+include ../Common.blocks/DropdownDatepicker/DropdownDatepicker.pug
+include ../Common.blocks/AirDatapicker/AirDatapicker.pug
+include ../Library.blocks/AirDatapicker/AirDatapicker.pug
 
 include ../Common.blocks/DropdownGuests/-Option/DropdownGuests-Option.pug
 include ../Common.blocks/DropdownGuests/DropdownGuests.pug
@@ -46,60 +50,60 @@ html
 
 
     body
-        +Container('', 'Container_BgColor_White Container_MarBot_50px')
+        +Container('', 'Container_bgColor_white Container_marBot_50px')
             +LogoWrapper()
                 +Logo()
             +Content('', 'Content-Wrapper')
                 +Wrapper()
-                    +FigureHtml5('', 'FigureHtml5_PdB_20px')
-                        +FigureHtml5-Image('', 'FigureHtml5_Bg_Dsh100')
+                    +FigureHtml5('', 'FigureHtml5_pdB_20px')
+                        +FigureHtml5-Image('', 'FigureHtml5_bg_dsh100')
                         +FigureHtml5-FigcaptionWrapper()
                             +FigureHtml5-Figcaption('Dark Shade 100%')
-                            +FigureHtml5-Figcaption('#1F2041', 'FigureHtml5_Fw_400 FigureHtml5_Ff_QuicksandRegular')
-                    +FigureHtml5('', 'FigureHtml5_PdB_20px')
-                        +FigureHtml5-Image('', 'FigureHtml5_Bg_Dsh75')
+                            +FigureHtml5-Figcaption('#1F2041', 'FigureHtml5_fw_400 FigureHtml5_ff_quicksandRegular')
+                    +FigureHtml5('', 'FigureHtml5_pdB_20px')
+                        +FigureHtml5-Image('', 'FigureHtml5_bg_dsh75')
                         +FigureHtml5-FigcaptionWrapper()
                             +FigureHtml5-Figcaption('Dark Shade 75%')
-                            +FigureHtml5-Figcaption('#1F2041', 'FigureHtml5_Fw_400 FigureHtml5_Ff_QuicksandRegular')
-                    +FigureHtml5('', 'FigureHtml5_PdB_20px')
-                        +FigureHtml5-Image('', 'FigureHtml5_Bg_Dsh50')
+                            +FigureHtml5-Figcaption('#1F2041', 'FigureHtml5_fw_400 FigureHtml5_ff_quicksandRegular')
+                    +FigureHtml5('', 'FigureHtml5_pdB_20px')
+                        +FigureHtml5-Image('', 'FigureHtml5_bg_dsh50')
                         +FigureHtml5-FigcaptionWrapper()
                             +FigureHtml5-Figcaption('Dark Shade 50%')
-                            +FigureHtml5-Figcaption('#1F2041', 'FigureHtml5_Fw_400 FigureHtml5_Ff_QuicksandRegular')
-                    +FigureHtml5('', 'FigureHtml5_PdB_20px')
-                        +FigureHtml5-Image('', 'FigureHtml5_Bg_Dsh25')
+                            +FigureHtml5-Figcaption('#1F2041', 'FigureHtml5_fw_400 FigureHtml5_ff_quicksandRegular')
+                    +FigureHtml5('', 'FigureHtml5_pdB_20px')
+                        +FigureHtml5-Image('', 'FigureHtml5_bg_dsh25')
                         +FigureHtml5-FigcaptionWrapper()
                             +FigureHtml5-Figcaption('Dark Shade 25%')
-                            +FigureHtml5-Figcaption('#1F2041', 'FigureHtml5_Fw_400 FigureHtml5_Ff_QuicksandRegular')
-                    +FigureHtml5('', 'FigureHtml5_PdB_20px')
-                        +FigureHtml5-Image('', 'FigureHtml5_Bg_Dsh05')
-                        +FigureHtml5-FigcaptionWrapper('', 'FigureHtml5_PdTop_correct')
+                            +FigureHtml5-Figcaption('#1F2041', 'FigureHtml5_fw_400 FigureHtml5_ff_quicksandRegular')
+                    +FigureHtml5('', 'FigureHtml5_pdB_20px')
+                        +FigureHtml5-Image('', 'FigureHtml5_bg_dsh05')
+                        +FigureHtml5-FigcaptionWrapper('', 'FigureHtml5_pdTop_correct')
                             +FigureHtml5-Figcaption('Dark Shade 5%')
-                            +FigureHtml5-Figcaption('#1F2041', 'FigureHtml5_Fw_400 FigureHtml5_Ff_QuicksandRegular')
-                    +FigureHtml5('', 'FigureHtml5_PdB_20px')
-                        +FigureHtml5-Image('', 'FigureHtml5_Bg_Purple')
-                        +FigureHtml5-FigcaptionWrapper('', 'FigureHtml5_PdTop_correct')
+                            +FigureHtml5-Figcaption('#1F2041', 'FigureHtml5_fw_400 FigureHtml5_ff_quicksandRegular')
+                    +FigureHtml5('', 'FigureHtml5_pdB_20px')
+                        +FigureHtml5-Image('', 'FigureHtml5_bg_purple')
+                        +FigureHtml5-FigcaptionWrapper('', 'FigureHtml5_pdTop_correct')
                             +FigureHtml5-Figcaption('Purple')
-                            +FigureHtml5-Figcaption('#BC9CFF', 'FigureHtml5_Fw_400 FigureHtml5_Ff_QuicksandRegular')
-                    +FigureHtml5('', 'FigureHtml5_PdB_20px')
-                        +FigureHtml5-Image('', 'FigureHtml5_Bg_Green')
+                            +FigureHtml5-Figcaption('#BC9CFF', 'FigureHtml5_fw_400 FigureHtml5_ff_quicksandRegular')
+                    +FigureHtml5('', 'FigureHtml5_pdB_20px')
+                        +FigureHtml5-Image('', 'FigureHtml5_bg_green')
                         +FigureHtml5-FigcaptionWrapper()
                             +FigureHtml5-Figcaption('Green')
-                            +FigureHtml5-Figcaption('#6FCF97', 'FigureHtml5_Fw_400 FigureHtml5_Ff_QuicksandRegular')
+                            +FigureHtml5-Figcaption('#6FCF97', 'FigureHtml5_fw_400 FigureHtml5_ff_quicksandRegular')
                 +Wrapper()
                     +ExampleText()
-                        +ExampleText-Header('H1', 'ExampleText_FontSize_24px ExampleText_LineH_29')
-                        +ExampleText-Text('This one is the sub-section or widget title', 'ExampleText_FontStyle_H1')
+                        +ExampleText-Header('H1', 'ExampleText_fontSize_24px ExampleText_lineH_29')
+                        +ExampleText-Text('This one is the sub-section or widget title', 'ExampleText_fontStyle_h1')
                     +ExampleText()
-                        +ExampleText-Header('H2', 'ExampleText_FontSize_19px ExampleText_LineH_23')
-                        +ExampleText-Text('Next one is the item title inside widgets', 'ExampleText_FontStyle_H2')
+                        +ExampleText-Header('H2', 'ExampleText_fontSize_19px ExampleText_lineH_23')
+                        +ExampleText-Text('Next one is the item title inside widgets', 'ExampleText_fontStyle_h2')
                     +ExampleText()
-                        +ExampleText-Header('H3', 'ExampleText_FontSize_12px ExampleText_TextTransf_Upper ExampleText_LineH_15')
-                        +ExampleText-Text('This is a label or CTA text', 'ExampleText_FontStyle_H3 ExampleText_PdBot_Correct')
+                        +ExampleText-Header('H3', 'ExampleText_fontSize_12px ExampleText_textTransf_upper ExampleText_lineH_15')
+                        +ExampleText-Text('This is a label or CTA text', 'ExampleText_fontStyle_h3 ExampleText_pdBot_correct')
                     +ExampleText()
-                        +ExampleText-Header('Body', 'ExampleText_FontSize_14px ExampleText_LineH_24')
-                        +ExampleText-Text('This is the body text which is used for most of the design, like paragraphs, lists, etc.', 'ExampleText_FontStyle_Body ExampleText_PdR_34 ExampleText_Width_316px')
-        +Container('', 'Container_BgColor_White Container_MarBot_50px Container_Height_1853px')
+                        +ExampleText-Header('Body', 'ExampleText_fontSize_14px ExampleText_lineH_24')
+                        +ExampleText-Text('This is the body text which is used for most of the design, like paragraphs, lists, etc.', 'ExampleText_fontStyle_body ExampleText_pdR_34 ExampleText_width_316px')
+        +Container('', 'Container_bgColor_white Container_marBot_50px Container_height_1853px')
             +LogoWrapper()
                 +Logo()
             +Content()
@@ -108,7 +112,7 @@ html
                         //- +InputBlock()(class='Wrapper-GuestsDropdown')
                         //-     +InputBlock-Wrapper
                         //-         +InputBlock-FieldName('dropdown')
-                        //-         +InputBlock-FieldDescription('default')(class='InputBlock_PdTop_3px')
+                        //-         +InputBlock-FieldDescription('default')(class='InputBlock_pdTop_3px')
                         //-     Select.DropdownGuests(multiple='multiple', id="DropdownGuests2", name='DropdownGuests', size='3')
                         //-         +DropdownGuests-Option('большие')(value='moreThanAdults')
                         //-         +DropdownGuests-Option('маленькие')(value='moreThanChildren')
@@ -117,38 +121,38 @@ html
                             +InputBlock-Wrapper()
                                 +InputBlock-FieldName('text field')
                                 +InputBlock-FieldDescription('default')
-                            +InputBlock-InputField()(class='InputBlock_Color_Dark25', type='text', placeholder='Email')
+                            +InputBlock-InputField()(class='InputBlock_color_dark25', type='text', placeholder='Email')
                         +InputBlock()(class='Wrapper-FormElements')
                             +InputBlock-Wrapper()
                                 +InputBlock-FieldName('text field')
-                                +InputBlock-FieldDescription('HOVER / FOCUS')(class='InputBlock_PdTop_3px')
-                            +InputBlock-InputField()(class='InputBlock_Color_Dark75', type='text', placeholder='This is pretty awesome')
+                                +InputBlock-FieldDescription('HOVER / FOCUS')(class='InputBlock_pdTop_3px')
+                            +InputBlock-InputField()(class='InputBlock_color_dark75', type='text', placeholder='This is pretty awesome')
                         +InputBlock()(class='Wrapper-GuestsDropdown')
                             +InputBlock-Wrapper
                                 +InputBlock-FieldName('dropdown')
-                                +InputBlock-FieldDescription('default')(class='InputBlock_PdTop_3px')
+                                +InputBlock-FieldDescription('default')(class='InputBlock_pdTop_3px')
                             Select.DropdownGuests(multiple='multiple', id="DropdownGuests", name='DropdownGuests', size='3')
                                 +DropdownGuests-Option('взрослые')(value='adults')
                                 +DropdownGuests-Option('дети')(value='children')
                                 +DropdownGuests-Option('младенцы')(value='babies')
                             //- +InputBlock-WrapperForSelectWithArrow()
                             //-     +InputBlock-SelectArrow('expand_more')
-                            //-     Select.InputBlock-InputField.InputBlock_Appearan_none.InputBlock_PdTop_11px.InputBlock_LetterSpacing_0px.InputBlock_Color_Dark75
+                            //-     Select.InputBlock-InputField.InputBlock_appearan_none.InputBlock_pdTop_11px.InputBlock_letterSpacing_0px.InputBlock_color_dark75
                             //-         +InputBlock-Option('Сколько гостей', 'selected')
                             //-         +InputBlock-Option()
                             //-         +InputBlock-Option()               
                         +InputBlock()(class='Wrapper-MasketField')
                             +InputBlock-Wrapper()
                                 +InputBlock-FieldName('masked text field')
-                                +InputBlock-FieldDescription('default')(class='InputBlock_PdTop_1px')
-                            +InputBlock-InputField()(class='InputBlock_Color_Dark75', type='text', placeholder='ДД.ММ.ГГГГ')                        
+                                +InputBlock-FieldDescription('default')(class='InputBlock_pdTop_1px')
+                            +InputBlock-InputField()(class='InputBlock_color_dark75', type='text', placeholder='ДД.ММ.ГГГГ')                        
                         +Wrapper-DateDropdown()
                             +InputBlock()
                                 +InputBlock-Wrapper()
                                     +InputBlock-FieldName('date dropdown')
                                 +InputBlock-WrapperForSelectWithArrow()
                                     +InputBlock-SelectArrow('expand_more')
-                                    Select.InputBlock-InputField.InputBlock_Appearan_none.InputBlock_LetterSpacing_0px.InputBlock_Color_Dark75.InputBlock_Width_150px.InputBlock_PdTop_11px
+                                    Select.InputBlock-InputField.InputBlock_appearan_none.InputBlock_letterSpacing_0px.InputBlock_color_dark75.InputBlock_width_150px.InputBlock_pdTop_11px
                                         +InputBlock-Option('ДД.ММ.ГГГГ', 'selected')
                                         +InputBlock-Option()
                                         +InputBlock-Option()  
@@ -157,7 +161,7 @@ html
                                     +InputBlock-FieldName('date dropdown')
                                 +InputBlock-WrapperForSelectWithArrow()
                                     +InputBlock-SelectArrow('expand_more')
-                                    Select.InputBlock-InputField.InputBlock_Appearan_none.InputBlock_MrBot_19px.InputBlock_Color_Dark75.InputBlock_Width_150px.InputBlock_PdTop_11px.InputBlock_MrBot_37px
+                                    Select.InputBlock-InputField.InputBlock_appearan_none.InputBlock_mrBot_19px.InputBlock_color_dark75.InputBlock_width_150px.InputBlock_pdTop_11px.InputBlock_mrBot_37px
                                         +InputBlock-Option('19.08.2019', 'selected')
                                         +InputBlock-Option()
                                         +InputBlock-Option()
@@ -166,7 +170,7 @@ html
                                 +InputBlock-FieldName('filter rate dropdown')
                             +InputBlock-WrapperForSelectWithArrow()
                                 +InputBlock-SelectArrow('expand_more')
-                                Select.InputBlock-InputField.InputBlock_Width_266px.InputBlock_Appearan_none.InputBlock_PdTop_11px.InputBlock_LetterSpacing_0px.InputBlock_MrBot_39px.InputBlock_Color_Dark75
+                                Select.InputBlock-InputField.InputBlock_width_266px.InputBlock_appearan_none.InputBlock_pdTop_11px.InputBlock_letterSpacing_0px.InputBlock_mrBot_39px.InputBlock_color_dark75
                                     +InputBlock-Option('19 авг - 23 авг', 'selected')
                                     +InputBlock-Option()
                                     +InputBlock-Option() 
@@ -175,22 +179,22 @@ html
                                 +InputBlock-FieldName('subscription text field')
                             +InputBlock-WrapperForSelectWithArrow()
                                 +InputBlock-SelectArrow('arrow_forward')
-                                Select.InputBlock-InputField.InputBlock_Width_266px.InputBlock_Appearan_none.InputBlock_PdTop_11px.InputBlock_LetterSpacing_0px.InputBlock_MrBot_97px.InputBlock_Color_Dark75
+                                Select.InputBlock-InputField.InputBlock_width_266px.InputBlock_appearan_none.InputBlock_pdTop_11px.InputBlock_letterSpacing_0px.InputBlock_mrBot_97px.InputBlock_color_dark75
                                     +InputBlock-Option('Email', 'selected')
                                     +InputBlock-Option()
                                     +InputBlock-Option()
                         +InputBlock()(class='Wrapper-FacilitiesDropdown')           
-                            +InputBlock-Wrapper(class='InputBlock_Width_265px')
+                            +InputBlock-Wrapper(class='InputBlock_width_265px')
                                 +InputBlock-FieldName('dropdown')
-                                +InputBlock-FieldDescription('default')(class='InputBlock_PdTop_3px')
+                                +InputBlock-FieldDescription('default')(class='InputBlock_pdTop_3px')
                             select.Dropdown(multiple='multiple', id="dropdownFacilities", name='dropdownFacilities', size='3')
                                 +Dropdown-Option('спальни', 'selected')(value='bedrooms')
                                 +Dropdown-Option('кровати', 'selected')(value='beds')                                
                                 +Dropdown-Option('комнаты')(value='bathrooms')
                         +InputBlock()(class='Wrapper-FacilitiesDropdown')           
-                            +InputBlock-Wrapper(class='InputBlock_Width_265px')
+                            +InputBlock-Wrapper(class='InputBlock_width_265px')
                                 +InputBlock-FieldName('dropdown')
-                                +InputBlock-FieldDescription('expanded')(class='InputBlock_PdTop_3px')
+                                +InputBlock-FieldDescription('expanded')(class='InputBlock_pdTop_3px')
                             select.Dropdown(multiple='multiple', id="dropdownFacilitiesExpanded", name='dropdownFacilities', size='3')
                                 +Dropdown-Option('спальни', 'selected')(value='bedrooms')
                                 +Dropdown-Option('кровати', 'selected')(value='beds')                                
@@ -200,3 +204,8 @@ html
                             +Wrapper()
                             +Wrapper()
                         +Wrapper()
+
++AirDatapicker()
++DropdownDatepicker()
+
++DropdownDatepicker-Icon()
