added Open Sans font

--- a/Common.blocks/Base/Variables.scss
+++ b/Common.blocks/Base/Variables.scss
@@ -10,5 +10,5 @@ $DarkShade25: rgba(31, 32, 65, 0.25);
 $DarkShade05: rgba(31, 32, 65, 0.05);
 
 $background: #FFFFFF;
-
+$DatepickerArrowColor: #BC9CFF;
 $colorApplyButtonGuestsDropdown: #BC9CFF;
