--- a/Common.blocks/DropdownDatepicker/-ArrivalDate/DropdownDatepicker-ArrivalDate.pug
+++ b/Common.blocks/DropdownDatepicker/-ArrivalDate/DropdownDatepicker-ArrivalDate.pug
@@ -1,4 +1,4 @@
 mixin DropdownDatepicker-ArrivalDate(content)
-    button.DropdownDatepicker-ArrivalDate&attributes(attributes) #{content}
+    div.DropdownDatepicker-ArrivalDate&attributes(attributes) #{content}
         if block
             block
