--- a/Common.blocks/DropdownDatepicker/-DateOfDeparture/DropdownDatepicker-DateOfDeparture.pug
+++ b/Common.blocks/DropdownDatepicker/-DateOfDeparture/DropdownDatepicker-DateOfDeparture.pug
@@ -1,4 +1,4 @@
 mixin DropdownDatepicker-DateOfDeparture(content)
-    button.DropdownDatepicker-DateOfDeparture&attributes(attributes) #{content}
+    div.DropdownDatepicker-DateOfDeparture&attributes(attributes) #{content}
         if block
             block
