fix filter date dropdown styles and border radius in DropdownGuests, DropdownFacilities

--- a/Common.blocks/Dropdown/Dropdown.scss
+++ b/Common.blocks/Dropdown/Dropdown.scss
@@ -72,6 +72,8 @@
 
   .ui-multiselect-menu {
     padding: 0px 3px 5px 13px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
   }
 
   .ui-multiselect-checkboxes label {
