--- a/pages/index.scss
+++ b/pages/index.scss
@@ -118,3 +118,10 @@
 @import '../Common.blocks/DropdownDatepicker/-WrapperForDropdown/DropdownDatepicker-WrapperForDropdown';
 @import '../Common.blocks/DropdownDatepicker/-InputHidden/DropdownDatepicker-InputHidden';
 @import '../Common.blocks/DropdownDatepicker/-AirDatepicker/DropdownDatepicker-AirDatepicker';
+@import '../Common.blocks/FilterDateDropdown/FilterDateDropdown';
+@import '../Common.blocks/FilterDateDropdown/-AirDatepicker/FilterDateDropdown-AirDatepicker';
+@import '../Common.blocks/FilterDateDropdown/-InputHidden/FilterDateDropdown-InputHidden';
+@import '../Common.blocks/FilterDateDropdown/-Open/FilterDateDropdown-Open';
+@import '../Common.blocks/FilterDateDropdown/-Icon/FilterDateDropdown-Icon';
+@import '../Common.blocks/FilterDateDropdown/-Dropdown/FilterDateDropdown-Dropdown';
+@import '../Common.blocks/Wrapper/-FilterDateDropdown/Wrapper-FilterDateDropdown';
